training_file.ipynb

--- a/training_file.ipynb
+++ b/training_file.ipynb
@@ -31,7 +31,7 @@
    "id": "79ad2746",
    "metadata": {},
    "source": [
-    "# No_Sliding_Window"
+    "# No_Overlapping_Window"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "id": "31e425d4",
    "metadata": {},
    "source": [
-    "# Sliding_Window"
+    "# Overlapping_Window"
    ]
   },
   {
